--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./normalize.css" />
+  </head>
+  <body>
+    <div class="dashboard">
+      <div class="left-sidebar">
+        <div class="row firstrow">
+          <img src="./Assets/view-dashboard.svg" alt="dshboard-icon" />
+          <a href="#"><b>Dashboard</b></a>
+        </div>
+
+        <div class="row secondrow">
+          <img src="./Assets/home-circle.svg" alt="home" />
+          <a href="#"><b>Home</b></a>
+          <img src="./Assets/card-account-details-outline.svg" alt="Profile" />
+          <a href="#"><b>Profile</b></a>
+          <img src="./Assets/message.svg" alt="message" />
+          <a href="#"><b>Messages</b></a>
+          <img src="./Assets/file-multiple-outline.svg" alt="" />
+          <a href="#"><b>Task</b></a>
+          <img src="./Assets/view-dashboard.svg" alt="" />
+          <a href="#"><b>Communities</b></a>
+        </div>
+
+        <div class="row thirdrow">
+          <img src="./Assets/cog.svg" alt="Setting" />
+          <a href="#"><b>Settings</b></a>
+          <img src="./Assets/help-box.svg" alt="Supprort" />
+          <a href="#"><b>Support</b></a>
+          <img src="./Assets/shield-check.svg" alt="privacy" />
+          <a href="#"><b>Privacy</b></a>
+        </div>
+      </div>
+      <div class="header">
+        <div class="header-row1">
+          <div class="search">
+            <img src="./Assets/magnify.svg" alt="search" />
+            <input type="text" />
+          </div>
+          <div class="left-icon">
+            <img src="./Assets/bell-ring-outline.svg" alt="bell" />
+            <img src="./Assets/close-up-cat-sitting.jpg" alt="no image" />
+            <p><b>Morgan Oakley</b></p>
+          </div>
+        </div>
+        <div class="header-row2">
+          <div class="morgan">
+            <img src="./Assets/close-up-cat-sitting.jpg" alt="morgan" />
+            <p><b>Moragan Oakley</b></p>
+          </div>
+        </div>
+      </div>
+      <div class="main">main</div>
+      <div class="right-sidebar">right side bar</div>
+    </div>
+  </body>
 </html>
