--- a/index.html
+++ b/index.html
@@ -45,19 +45,164 @@
           </div>
           <div class="left-icon">
             <img src="./Assets/bell-ring-outline.svg" alt="bell" />
-            <img src="./Assets/close-up-cat-sitting.jpg" alt="no image" />
-            <p><b>Morgan Oakley</b></p>
+            <img src="./Assets/imagecopy.png" alt="no image" />
+            <p><b>Abdulhaqqii</b></p>
           </div>
         </div>
         <div class="header-row2">
           <div class="morgan">
-            <img src="./Assets/close-up-cat-sitting.jpg" alt="morgan" />
-            <p><b>Moragan Oakley</b></p>
+            <div class="hithere">
+              <img src="./Assets/imagecopy.png" alt="morgan" />
+              <span>Hi there,</span>
+              <b>Abex master(@abex)</b>
+            </div>
+            <div class="buttons">
+              <button>New</button>
+              <button>Upload</button>
+              <button>Share</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="main">main</div>
-      <div class="right-sidebar">right side bar</div>
+      <div class="main">
+        <div class="card card1">
+          <h1>Super Cool Project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Provident architecto
+            adipisci laudantium fuga sit. Commodi rem quasi inventore!
+            Praesentium, optio.
+          </p>
+          <div class="card-icon">
+            <img src="./Assets/star-plus-outline.svg" alt="" />
+            <img src="./Assets/source-fork.svg" alt="fork" />
+            <img src="./Assets/eye-plus-outline.svg" alt="eye-plus-outline" />
+          </div>
+        </div>
+        <div class="card card2">
+          <h1>Less Cool Project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Provident architecto
+            adipisci laudantium fuga sit. Commodi rem quasi inventore!
+            Praesentium, optio.
+          </p>
+          <div class="card-icon">
+            <img src="./Assets/star-plus-outline.svg" alt="" />
+            <img src="./Assets/source-fork.svg" alt="fork" />
+            <img src="./Assets/eye-plus-outline.svg" alt="eye-plus-outline" />
+          </div>
+        </div>
+        <div class="card card3">
+          <h1>Impossible App</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Provident architecto
+            adipisci laudantium fuga sit. Commodi rem quasi inventore!
+            Praesentium, optio.
+          </p>
+
+          <div class="card-icon">
+            <img src="./Assets/star-plus-outline.svg" alt="" />
+            <img src="./Assets/source-fork.svg" alt="fork" />
+            <img src="./Assets/eye-plus-outline.svg" alt="eye-plus-outline" />
+          </div>
+        </div>
+        <div class="card card4">
+          <h1>Super Cool Project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Provident architecto
+            adipisci laudantium fuga sit. Commodi rem quasi inventore!
+            Praesentium, optio.
+          </p>
+          <div class="card-icon">
+            <img src="./Assets/star-plus-outline.svg" alt="" />
+            <img src="./Assets/source-fork.svg" alt="fork" />
+            <img src="./Assets/eye-plus-outline.svg" alt="eye-plus-outline" />
+          </div>
+        </div>
+        <div class="card card5">
+          <h1>Super Cool Project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Provident architecto
+            adipisci laudantium fuga sit. Commodi rem quasi inventore!
+            Praesentium, optio.
+          </p>
+          <div class="card-icon">
+            <img src="./Assets/star-plus-outline.svg" alt="" />
+            <img src="./Assets/source-fork.svg" alt="fork" />
+            <img src="./Assets/eye-plus-outline.svg" alt="eye-plus-outline" />
+          </div>
+        </div>
+        <div class="card card6">
+          <h1>Super Cool Project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Provident architecto
+            adipisci laudantium fuga sit. Commodi rem quasi inventore!
+            Praesentium, optio.
+          </p>
+          <div class="card-icon">
+            <img src="./Assets/star-plus-outline.svg" alt="" />
+            <img src="./Assets/source-fork.svg" alt="fork" />
+            <img src="./Assets/eye-plus-outline.svg" alt="eye-plus-outline" />
+          </div>
+        </div>
+      </div>
+      <div class="right-sidebar">
+        <div class="announcement">
+          <div class="sitementenace">
+            <h2>Site Mentanace</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Dolorem enim ratione esse
+              nesciunt cum? Distinctio tempora optio illo consequuntur! Animi.
+            </p>
+          </div>
+          <hr />
+          <div class="community">
+            <h2>Community Shared Day</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Atque corrupti ratione
+              numquam quis nesciunt. Distinctio dignissimos aspernatur quae quo
+              explicabo?
+            </p>
+          </div>
+          <hr />
+          <div class="updateprivacy">
+            <h2>Update Privacy</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Quibusdam laborum magni
+              possimus ut minima! Illo officia deserunt ipsam enim numquam!
+            </p>
+          </div>
+        </div>
+        <div class="trending">
+          <div class="profile profile1">
+            <img src="./Assets/prof.png" alt="" />
+            <div class="text">
+              <span>@tegsan</span>
+              <p>World peace</p>
+            </div>
+          </div>
+          <div class="profile profile2">
+            <img src="./Assets/prof2.png" alt="" />
+            <div class="text">
+              <span>@morgan</span>
+              <p>Super cool Project peace</p>
+            </div>
+          </div>
+          <div class="profile profile3">
+            <img src="./Assets/prof3.png" alt="" />
+            <div class="text">
+              <span>@kendali</span>
+              <p>Life Changimg App peace</p>
+            </div>
+          </div>
+          <div class="profile profile4">
+            <img src="./Assets/prof4.png" alt="" />
+            <div class="text">
+              <span>@alex</span>
+              <p>No Traffic Maker</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
